Fix text align for safari

--- a/wp-content/themes/common/scss/_main.scss
+++ b/wp-content/themes/common/scss/_main.scss
@@ -215,6 +215,7 @@ body {
 					line-height: 20px;
 					font-size: 18px;
 					text-align: center;
+					text-align: -webkit-center;
 					font-weight: 800;
 					color: #0000ff;
 					text-transform: uppercase;
@@ -343,6 +344,7 @@ body {
 					line-height: 20px;
 					font-size: 18px;
 					text-align: center;
+					text-align: -webkit-center;
 					font-weight: 800;
 					color: #0000ff;
 					text-transform: uppercase;
